--- a/grid-style.css
+++ b/grid-style.css
@@ -23,3 +23,28 @@ img {
     .section-4 {
         grid-column-end: span 2;
     }
+    /*=======================*/
+    * {
+        box-sizing: border-box;
+    }
+    .item {
+        width:  50px;
+        height: 50px;
+        float: left;
+        border: 2px solid #333;
+      }
+    
+      .item.thumbnail {
+        width:  100px;
+        height: 100px;
+        }
+    
+      .item.medium {
+        width:  150px;
+        height: 50px;
+        }
+    
+      .item.large {
+        width:  200px;
+        height: 100px;
+        }
