--- a/grid-style.css
+++ b/grid-style.css
@@ -7,21 +7,24 @@ img {
 
 .grid-layout {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    grid-auto-rows: 150px;
+    grid-gap: 5px;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    grid-auto-rows: 75px;
+    grid-auto-flow: dense;
    
       }
       .section-1 {
-          grid-row-start: span 2;
+          grid-column: span 2;
       }
       .section-2 {
-        grid-column-start: span 1;
+        grid-row: span 2;
     }
     .section-3 {
-        grid-row-end: span 2;
+        grid-row: span 2;
+        grid-column: span 2;
     }
     .section-4 {
-        grid-column-end: span 2;
+        grid-column: span 2;
     }
     /*=======================*/
     * {
